Upgrade to Java 21 List.getLast()